chore: fixed overflow issue for safari

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,8 @@ html {
   scroll-behavior: smooth;
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
